# cutevisca

./: CMakeLists.txt  README.md
cuteviscaapp/: CMakeLists.txt  Main.qml  PanTiltControl.qml  cutemqttclient.cpp  cutemqttclient.h  main.cpp  videorouterclient.cpp  videorouterclient.h
libcutevisca/: CMakeLists.txt  viscaemulator.cpp  viscaemulator.h  viscaudpcontroller.cpp  viscaudpcontroller.h
